# fang

./: README.md
faenger/: .env  .gitignore  Cargo.toml  compose.yaml  diesel.toml  faenger.sln  faenger.toml
faenger/faenger/: Dockerfile  Program.cs  faenger.csproj
faenger/faenger/Model/: LinkContext.cs  LinkDtos.cs  LinkEntry.cs
faenger/faenger/Properties/: launchSettings.json
faenger/migrations/2025-07-11-202512_create_faenge/: down.sql  up.sql
faenger/migrations/2025-07-11-202519_create_users/: up.sql
faenger/migrations/2026-07-01-225719_add_soft_forget/: down.sql  up.sql
faenger/migrations/2026-07-01-231551_create_backlinks/: down.sql  up.sql
faenger/src/: main.rs  models.rs  routes.rs  schema.rs
faenger/src/auth/: extractors.rs  handlers.rs  mod.rs
faenger/src/backlinks/: models.rs
faenger/src/links/: handlers.rs  models.rs
faenger/src/users/: models.rs
werfer/: .gitignore  background.js  common.css  manifest.json  options.html  options.js  overview.html  overview.js  update_manifest.json
werfer/popup/: toolbar_popup.html  toolbar_popup.js
