[package]
name = "faenger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
diesel = { version = "2.2.12", features = ["sqlite", "chrono", "r2d2"] }
dotenvy = "0.15.7"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
argon2 = { version = "0.5.3", features = ["rand", "std"] }
rand = "0.9.1"
chrono = { version = "0.4.41", features = ["serde"] }
pretty_env_logger = "0.5.0"
log = { version = "0.4.27", features = ["std"] }
r2d2 = "0.8.10"
